# LD43-NihilisticNurtureNavigation

./: .gitignore  Cargo.toml  LEVEL-JSON.html  LEVEL-JSON.md  README.md  vimrc
level-editor/: index.html  instance_list.json  keybindings.html  keybindings.json
level-editor/css/: keybindings.css  style.css
level-editor/js/: grid.js  keybindings.js  keybindings_list.js  main.js  panel.js  settings.js
resources/levels/: 02_two.json  03_three.json  05_five.json  07_seven.json  08_eight.json  09_nine.json  10_ten.json  64x64.json  car.json  children.json  dev.json  door.json  doors.json  eight.json  eleven.json  five.json  four.json  fourteen.json  interactables.json  interaction.json  interaction2.json  intersect_test.json  jump_pad.json  jump_pad_one_way.json  jump_pad_states.json  larry.json  levelding.json  main.json  nine.json  one.json  one_way.json  pits.json  plain.json  plain_children.json  plane.json  seven.json  six.json  solidifier.json  solidifier_slim.json  stuck.json  (+13 more)
src/: animation.rs  children.rs  frames_counter.rs  gravity.rs  id_generator.rs  level_manager.rs  lib.rs  main.rs  player.rs  score.rs  settings.rs  wall.rs
src/color_rect/: builder.rs  mod.rs
src/game/: mod.rs
src/image_text/: builder.rs  mod.rs
src/interactables/: door.rs  goal.rs  jump_pad.rs  mod.rs  one_way.rs  solidifier.rs  switch.rs
src/level/: helpers.rs  mod.rs
src/level_manager/: helpers.rs  mod.rs
src/menu/: mod.rs  title.rs  toolbox.rs
src/people/: children.rs  mod.rs  player.rs
src/persons/: children.rs  mod.rs  player.rs
src/score/: child_moves_counter.rs  (+2 more)
(+40 files in other folders)
